Correcting spelling errors

--- a/lib/medussa_studio_web/templates/user/form.html.heex
+++ b/lib/medussa_studio_web/templates/user/form.html.heex
@@ -9,9 +9,9 @@
   <%= number_input f, :age %>
   <%= error_tag f, :age %>
 
-  <%= label f, :dateOfBrith %>
-  <%= date_select f, :dateOfBrith %>
-  <%= error_tag f, :dateOfBrith %>
+  <%= label f, :date_of_brith %>
+  <%= date_select f, :date_of_birth %>
+  <%= error_tag f, :date_of_birth %>
 
   <%= label f, :email %>
   <%= text_input f, :email %>
