--- a/lib/medussa_studio_web/templates/user/show.html.heex
+++ b/lib/medussa_studio_web/templates/user/show.html.heex
@@ -8,8 +8,8 @@
   </li>
 
   <li>
-    <strong>Dateofbrith:</strong>
-    <%= @user.dateOfBrith %>
+    <strong>Date of birth:</strong>
+    <%= @user.date_of_birth %>
   </li>
 
   <li>
