--- a/lib/medussa_studio_web/templates/user/index.html.heex
+++ b/lib/medussa_studio_web/templates/user/index.html.heex
@@ -4,7 +4,7 @@
   <thead>
     <tr>
       <th>Age</th>
-      <th>Dateofbrith</th>
+      <th>Date of birth</th>
       <th>Email</th>
       <th>Name</th>
       <th>Password</th>
@@ -18,7 +18,7 @@
 <%= for user <- @users do %>
     <tr>
       <td><%= user.age %></td>
-      <td><%= user.dateOfBrith %></td>
+      <td><%= user.date_of_birth %></td>
       <td><%= user.email %></td>
       <td><%= user.name %></td>
       <td><%= user.password %></td>
