--- a/lib/medussa_studio_web/templates/layout/_user_menu.html.heex
+++ b/lib/medussa_studio_web/templates/layout/_user_menu.html.heex
@@ -1,7 +1,9 @@
 <div class="container flex flex-wrap items-center">
 
   <div class="flex-1">
+    <a href="/" class="no-underline hover:underline">
     <img class="object-cover h-48 w-96" src={Routes.static_path(@conn, "/images/logo.svg")} alt="Meddusa Logo"/>
+    </a>
   </div>
 
   <div class="flex-1 text-center text-5xl">
