--- a/lib/medussa_studio_web/templates/layout/root.html.heex
+++ b/lib/medussa_studio_web/templates/layout/root.html.heex
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="csrf-token" content={csrf_token_value()}>
-    <%= live_title_tag assigns[:page_title] || "MedussaStudio", suffix: "MeddusaStudio" %>
+    <%= live_title_tag assigns[:page_title] || "MeddusaStudio", suffix: "" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
   </head>
   <body>
-    <header class="bg-emerald-400">
-      <section class="container inline">
-          <%= render "_user_menu.html", assigns %>
-      </section>
+    <header>
+          <%= render "nav_bar.html", assigns %>
     </header>
       <%= @inner_content %>
   </body>
