--- a/lib/medussa_studio_web/templates/user_registration/new.html.heex
+++ b/lib/medussa_studio_web/templates/user_registration/new.html.heex
@@ -1,17 +1,19 @@
-<h1>Register</h1>
-
-<.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
+<.form class="w-full max-w-lg justify-center items-center" let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :email %>
+  <%= label f, :nombre %>
+  <%= text_input f, :name, required: true %>
+  <%= error_tag f, :name %>
+
+  <%= label f, :correo %>
   <%= email_input f, :email, required: true %>
   <%= error_tag f, :email %>
 
-  <%= label f, :password %>
+  <%= label f, :contraseña %>
   <%= password_input f, :password, required: true %>
   <%= error_tag f, :password %>
 
@@ -19,22 +21,18 @@
   <%= select f, :age, 8..80 %>
   <%= error_tag f, :age %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name, required: true %>
-  <%= error_tag f, :name %>
-
-  <%= label f, :phone %>
-  <%= number_input f, :phone, required: true %>
+  <%= label f, :phone  %>
+  <%= text_input f, :phone, pattern: "[0-9]*"%>
   <%= error_tag f, :phone %>
 
 
 
   <div>
-    <%= submit "Register" %>
+    <button class="btn btn-green">Register</button>
   </div>
 </.form>
 
-<p>
+<p class="flex justify-center items-center">
   <%= link "Log in", to: Routes.user_session_path(@conn, :new) %> |
   <%= link "Forgot your password?", to: Routes.user_reset_password_path(@conn, :new) %>
 </p>
