--- a/lib/medussa_studio_web/templates/user_session/new.html.heex
+++ b/lib/medussa_studio_web/templates/user_session/new.html.heex
@@ -1,17 +1,17 @@
-<h1 class="text-center text-5xl font-semibold leading-normal mt-0 mb-2 text-black">Log in</h1>
-<div class="w-full max-w-max">
-  <.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user} class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
+<div class="w-full max-w-max justify-items-center	pt-11">
+  <h1 class="text-center text-5xl font-semibold leading-normal mt-0 mb-2 text-black ">Log in</h1>
+  <.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user} class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 pt-5">
     <%= if @error_message do %>
       <div class="alert alert-danger">
         <p class="text-red-500 text-xs italic"><%= @error_message %></p>
       </div>
     <% end %>
     <div class="mb-4">
-      <%= label f, :email, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
+      <%= label f, :correo, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
       <%= email_input f, :email, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
     </div>
     <div class="mb-6">
-      <%= label f, :password, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
+      <%= label f, :contraseña, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
       <%= password_input f, :password, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
     </div>
     <div class="mb-6">
