--- a/lib/medussa_studio_web/templates/user_appointment/new.html.heex
+++ b/lib/medussa_studio_web/templates/user_appointment/new.html.heex
@@ -1,8 +1,6 @@
 <div class="w-full max-w-max justify-items-center	pt-3">
   <h1 class="text-center text-5xl font-semibold leading-normal mt-0 text-black ">Crear cita</h1>
-  <form class="bg-white shadow-md rounded px-8 pb-8 mb-4 pt-5">
-    <div class="mb-4">
-    
-    </div>
-  </form>
+  <.form let={_f} for={@changeset} class="bg-white shadow-md rounded px-8 pb-8 mb-4 pt-5">
+     
+  </.form>
 </div>
