Adding function for catch the params for save the appointment

--- a/lib/medussa_studio_web/templates/page/appointment.html.heex
+++ b/lib/medussa_studio_web/templates/page/appointment.html.heex
@@ -8,8 +8,8 @@
     <% end %>
     <div class="mb-4">
       <%= label f, :servicio, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
-      <%= text_input f, :servicio, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
-      <%= error_tag f, :servicio %>
+      <%= text_input f, :service, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+      <%= error_tag f, :service %>
     </div>
     <%= submit "Save" %>
   </.form>
