--- a/lib/medussa_studio_web/templates/page/appointment.html.heex
+++ b/lib/medussa_studio_web/templates/page/appointment.html.heex
@@ -11,6 +11,19 @@
       <%= text_input f, :service, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
       <%= error_tag f, :service %>
     </div>
+    <div class="mb-6">
+      <%= label f, :fecha, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
+      <%= @date %>
+      <%= text_input f, :date, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+    </div>
+    <div class="mb-6">
+      <%= label f, :estatus, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
+      <%= text_input f, :status, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+    </div>
+    <div class="mb-6">
+      <%= label f, :hora, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
+      <%= time_input f, :time, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+    </div>
     <%= submit "Save" %>
   </.form>
 </div>
