--- a/lib/medussa_studio_web/templates/page/appointment.html.heex
+++ b/lib/medussa_studio_web/templates/page/appointment.html.heex
@@ -8,13 +8,12 @@
     <% end %>
     <div class="mb-4">
       <%= label f, :servicio, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
-      <%= text_input f, :service, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+      <%= select f, :service, ["Corte": "corte", "Tinte": "tinte"], class: ["block text-gray-700 text-sm font-bold mb-2"] %>
       <%= error_tag f, :service %>
     </div>
     <div class="mb-6">
-      <%= label f, :fecha, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
-      <%= @date %>
-      <%= text_input f, :date, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+      <%= label f, :fecha_seleccionada, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
+      <%= Enum.map(@date, fn {_key, value} -> value end) %>
     </div>
     <div class="mb-6">
       <%= label f, :estatus, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
