--- a/lib/medussa_studio_web/live/appointment_live/user_appointment.html.heex
+++ b/lib/medussa_studio_web/live/appointment_live/user_appointment.html.heex
@@ -18,13 +18,13 @@
       </div>
       <div class="mb-6">
         <%= label f, :estatus, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
-        <%= text_input f, :status, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
+        <%= select f, :status, Ecto.Enum.values(MedussaStudio.Appointments.Appointment, :status), selected: :Espera, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
       </div>
       <div class="mb-6">
         <%= label f, :hora, class: ["block text-gray-700 text-sm font-bold mb-2"] %>
         <%= time_input f, :time, required: true, class: ["shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"] %>
       </div>
-      <%= submit "Save" %>
+      <%= submit "Confirmar", class: ["bg-emerald-300 hover:bg-emerald-500 text-black font-bold py-2 px-4 rounded"] %>
     </.form>
   </div>
 </div>
