--- a/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
+++ b/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5  bg-teal-500	">
+<nav class=" border-gray-200 px-2 sm:px-4 py-2.5  bg-teal-500	">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <img src="/images/logo.png" class="mr-3 h-6 sm:h-14" alt="Meddusa Studio">
@@ -64,7 +64,7 @@
     </div>
   </div>
 </nav>
-<!-- 
+<!--
 <nav class="container flex flex-wrap items-center">
 
   <div class="flex-1">
