--- a/lib/medussa_studio_web/templates/page/index.html.heex
+++ b/lib/medussa_studio_web/templates/page/index.html.heex
@@ -1,3 +1,6 @@
 <div>
-<h1 class="text-center text-5xl">Welcome to MedussaStudio</h1>
+  <h1 class="text-center text-5xl pb-4">Welcome to MedussaStudio</h1>
+  <a href="/calendar" class="p-3 font-bold text-sm text-white hover:text-emerald-500 bg-stone-700">
+    Calendario
+  </a>
 </div>
