--- a/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
+++ b/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5  bg-teal-500	">
+<nav class=" border-gray-200 px-2 sm:px-4 py-2.5  bg-teal-500	">
   <div class="container flex flex-wrap justify-between items-center mx-auto">
     <a href="/" class="flex items-center">
       <img src="/images/logo.png" class="mr-3 h-6 sm:h-14" alt="Meddusa Studio">
@@ -64,46 +64,3 @@
     </div>
   </div>
 </nav>
-<!-- 
-<nav class="container flex flex-wrap items-center">
-
-  <div class="flex-1">
-    <a href="/" class="no-underline hover:underline">
-    <img class="object-cover h-48 w-96" src={Routes.static_path(@conn, "/images/logo.svg")} alt="Meddusa Logo"/>
-    </a>
-  </div>
-
-  <div class="flex-1 text-center text-5xl">
-    <h1>
-      Meddusa Studio
-    </h1>
-  </div>
-
-  <div class="flex-1">
-    <ul>
-        <%= if @current_user do %>
-        <li>
-          <button class="bg-slate-600 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-full"><%= @current_user.email %></button>
-        </li>
-
-        <li>
-          <button class="bg-slate-600 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-full"><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></button>
-        </li>
-
-        <li>
-          <button class="bg-slate-600 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-full"><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></button>
-        </li>
-        <% else %>
-
-        <li>
-          <button class="bg-slate-600 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-full"><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></button>
-        </li>
-
-        <li>
-          <button class="bg-slate-600 hover:bg-slate-600 text-white font-bold py-2 px-4 rounded-full"><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></button>
-        </li>
-      <% end %>
-    </ul>
-  </div>
-</nav>
- -->
