--- a/lib/medussa_studio_web/templates/layout/root.html.heex
+++ b/lib/medussa_studio_web/templates/layout/root.html.heex
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sp">
   <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -11,8 +11,8 @@
   </head>
   <body>
     <header>
-          <%= render "nav_bar.html", assigns %>
+      <%= render "nav_bar.html", assigns %>
     </header>
-      <%= @inner_content %>
+    <%= @inner_content %>
   </body>
 </html>
