--- a/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
+++ b/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
@@ -10,7 +10,8 @@
         <img class="w-8 h-8 rounded-full" src="/images/alien.png" alt="user photo">
       </button>
       <!-- Dropdown menu -->
-      <div hidden class="z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 text-center" id="user-dropdown">
+      <!-- <%= live_component MedussaStudioWeb.ComponentLive.ProfileComponent %> -->
+      <div class="z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 text-center" id="user-dropdown">
         <%= if @current_user do %>
           <div class="py-3 px-4">
             <span class="block text-sm text-gray-900 dark:text-white"><%= @current_user.name %></span>
@@ -47,7 +48,7 @@
           <a href="#" class="block py-2 pr-4 pl-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-black md:p-0 dark:text-black md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Servicios y precios</a>
         </li>
         <li>
-          <a href="#" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-black md:p-0 dark:text-black md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
+          <a href="#" class="block py-2 pr-4 pl-3 text-gray-500 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-black md:p-0 dark:text-black md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contacto</a>
         </li>
       </ul>
     </div>
