--- a/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
+++ b/lib/medussa_studio_web/templates/layout/nav_bar.html.heex
@@ -10,26 +10,25 @@
         <img class="w-8 h-8 rounded-full" src="/images/alien.png" alt="user photo">
       </button>
       <!-- Dropdown menu -->
-      <!-- <%= live_component MedussaStudioWeb.ComponentLive.ProfileComponent %> -->
-      <div class="z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 text-center" id="user-dropdown">
+      <div class="absolute top-10 right-20 z-50 my-4 text-base list-none bg-white rounded divide-y divide-gray-100 shadow dark:bg-gray-700 dark:divide-gray-600 text-center" id="user-dropdown">
         <%= if @current_user do %>
           <div class="py-3 px-4">
             <span class="block text-sm text-gray-900 dark:text-white"><%= @current_user.name %></span>
             <span class="block text-sm font-medium text-gray-500 truncate dark:text-gray-400">  <%= @current_user.email %></span>
           </div>
         <% end %>
-        <ul class="py-1">
+        <ul class="py-1" aria-labelledby="user-menu-button">
           <%= if @current_user do %>
             <li>
-              <button class="flex py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"><%= link "Perfil", to: Routes.user_settings_path(@conn, :edit) %></button>
-              <button class="flex py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"><%= link "Salir", to: Routes.user_session_path(@conn, :delete), method: :delete %></button>
+              <%= link "Perfil", to: Routes.user_settings_path(@conn, :edit), class: ["block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"] %>
+              <%= link "Salir", to: Routes.user_session_path(@conn, :delete), method: :delete, class: ["block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"] %>
             </li>
           <% else %>
             <li>
-              <button class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"><%= link "Registrarse", to: Routes.user_registration_path(@conn, :new) %></button>
+              <%= link "Registrarse", to: Routes.user_registration_path(@conn, :new), class: ["block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"] %>
             </li>
             <li>
-              <button class="block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"><%= link "Iniciar sessión", to: Routes.user_session_path(@conn, :new) %></button>
+              <%= link "Iniciar sessión", to: Routes.user_session_path(@conn, :new), class: ["block py-2 px-4 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"] %>
             </li>
           <% end %>
         </ul>
