--- a/lib/medussa_studio_web/templates/page/index.html.heex
+++ b/lib/medussa_studio_web/templates/page/index.html.heex
@@ -1,3 +1,1 @@
-<div>
-  <h1 class="text-center text-5xl pb-4">Welcome to MedussaStudio</h1>
-</div>
+<%= live_render(@conn, MedussaStudioWeb.GalleryLive.GalleryLive) %>
